--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "js-cookie": "^3.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
